# 2D_Tag

./: .gitignore  CMakeLists.txt
notes/: Todo.md
src/: config.h  main.cpp
src/Entity/: entity.cpp  entity.h
src/Game/: game.cpp  game.h
src/Renderer/: renderer.cpp  renderer.h
src/Textures/: texture.cpp  texture.h
src/UI/: ui.cpp  ui.h
src/log/: log.cpp  log.h
src/shaders/: shader.cpp  shader.h
src/shaders/shader/: shader.frag  shader.vert
